@@ -11,8 +11,6 @@ NG_SPICE_REWORK_INSTALL_STAGING = NO
 NG_SPICE_REWORK_INSTALL_TARGET = YES
 
 NG_SPICE_REWORK_CONF_OPT = CFLAGS="-I$(STAGING_DIR)/usr/include"
-# the above doesn't work with shared config.cache
-NG_SPICE_REWORK_USE_CONFIG_CACHE = NO
 
 NG_SPICE_REWORK_DEPENDENCIES = xserver_xorg-server xlib_libXaw
 
